--- a/app/globals.css
+++ b/app/globals.css
@@ -2,22 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
-/* .progress {
-  width: 382px;
-  -webkit-appearance: none;
-  height: 6px;
-  background: white;
-  outline: none;
-  opacity: 0.7;
-  -webkit-transition: 0.2s;
-  transition: opacity 0.2s;
-} */
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
 
-.progress::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 12px;
-  height: 6px;
-  background-color: #fea5b0;
-  cursor: pointer;
+.rotate-animation {
+  animation: rotate 10s infinite;
+}
+input[type="range"] {
+  -webkit-appearance: none !important;
+  background: #fff;
+  width: 382px;
+  border-radius: 5px;
+  height: 8px;
+}
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none !important;
+  border-radius: 24px;
+  background: #fea5b0;
+  height: 30px;
+  width: 30px;
 }
