--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,7 @@
 
 .rotate-animation {
   animation: rotate 10s linear infinite;
+  animation-play-state: paused;
 }
 input[type="range"] {
   -webkit-appearance: none !important;
